--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,9 @@ envlist =
     flake8
     bandit
     coverage
-    {py36,py37,py38,py39,pypy36,pypy37}-{pinned,unpinned,abtrunk}-trial
-    {py36,py37,py38,py39,pypy36,pypy37}-cli
-    {py36,py37,py38,py39,pypy36,pypy37}-examples
+    {py37,py38,py39,pypy37}-{pinned,unpinned,abtrunk}-trial
+    {py37,py38,py39,pypy37}-cli
+    {py37,py38,py39,pypy37}-examples
 
 
 # MAP: GitHub Actions Python Name => Tox Env Name (for Python)
@@ -19,11 +19,9 @@ envlist =
 #
 [gh-actions]
 python =
-    3.6: py36
     3.7: py37
     3.8: py38
     3.9: py39
-    pypy-3.6: pypy36
     pypy-3.7: pypy37
 
 
@@ -38,22 +36,16 @@ whitelist_externals =
     bandit
     flake8
 deps =
-    coverage
-    -r{toxinidir}/requirements-latest.txt
+    -r {toxinidir}/requirements-dev.txt
     examples: colorama
 commands =
-    # in envs with "pinned", install hash-pinned deps (which is what we release in binaries)
-    pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
-
     python -V
+    pip show pip
     pip show twisted
     pip show treq
 
     python -c "from autobahn.wamp.serializer import JsonObjectSerializer, MsgPackObjectSerializer, CBORObjectSerializer, UBJSONObjectSerializer"
     python -c "from twisted.python.compat import _PY3, unicode"
-
-    # in envs with "trial", install test/dev deps
-    trial: pip install -r {toxinidir}/requirements-dev.txt
 
     # in envs with "cli", run crossbar CLI via a test shell script
     cli: {toxinidir}/test/test_cli.sh
@@ -72,16 +64,7 @@ setenv =
 description =
     Generate docs using Sphinx.
 skip_install = False
-deps =
-    -r{toxinidir}/requirements-dev.txt
-    -r{toxinidir}/requirements-latest.txt
 commands =
-    # workaround for "pkg_resources.ContextualVersionConflict"
-    pip install --force-reinstall "urllib3<1.25,>=1.21.1"
-
-    # sphinxcontrib.images: avoid "RemovedInSphinx30Warning: sphinx.environment.NoUri is deprecated"
-    pip install --force-reinstall "sphinx<3"
-
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
 
@@ -91,7 +74,7 @@ commands =
     # generate HTML output
     sphinx-build -b dirhtml ./docs ./docs/_build
 
-    # move to HOME to preserve on Travis for upload to S3
+    # move to HOME to preserve in deploy for upload to S3
     -rm -rf {homedir}/crossbar-docs
     cp -R ./docs/_build {homedir}/crossbar-docs
 
@@ -123,12 +106,7 @@ commands =
 [testenv:coverage]
 skip_install = False
 changedir = {toxinidir}
-deps =
-    coverage
-    -r{toxinidir}/requirements-latest.txt
 commands =
-    pip install -r {toxinidir}/requirements-dev.txt
-
     # unit tests
     coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial crossbar
 
