fix docker file - after cleanup

--- a/docker/Dockerfile.cpy-slim
+++ b/docker/Dockerfile.cpy-slim
@@ -73,8 +73,8 @@ RUN crossbar version
 # add our user and group
 RUN adduser --system --group --uid 242 --home /node crossbar
 
-# initialize a Crossbar.io node
-COPY ./.node/ /node/
+# Crossbar.io node directory
+RUN mkdir -p /node/.crossbar
 RUN chown -R crossbar:crossbar /node
 
 # make /node a volume to allow external configuration
