--- a/requirements-latest.txt
+++ b/requirements-latest.txt
@@ -40,7 +40,7 @@ u-msgpack-python>=2.4.1
 # urllib3 is an indirect dependency, but we force a recent version because of https://nvd.nist.gov/vuln/detail/CVE-2019-11324
 # workaround for version conflict in requests vs sth else:
 urllib3<1.25,>=1.21.1
-vmprof>=0.4.12; platform_machine=='x86_64' or platform_machine=='i386' or platform_machine=='arm'
+# vmprof>=0.4.12; platform_machine=='x86_64' or platform_machine=='i386' or platform_machine=='arm'
 watchdog>=0.8.3
 werkzeug>=0.14.1
 wsaccel>=0.6.2; platform_python_implementation=='CPython'
