--- a/docker/Dockerfile.cpy-slim
+++ b/docker/Dockerfile.cpy-slim
@@ -2,6 +2,8 @@
 # however, CROSSBAR_ARCH will _not_ be available further down the line because of this ordering!
 ARG CROSSBAR_ARCH
 
+FROM multiarch/qemu-user-static:x86_64-aarch64 as qemu
+FROM multiarch/qemu-user-static:x86_64-arm as qemuarm
 FROM ${CROSSBAR_ARCH}/python:3.9-slim
 
 MAINTAINER The Crossbar.io Project <support@crossbario.com>
@@ -19,9 +21,8 @@ ENV CROSSBAR_VCS_REF $CROSSBAR_VCS_REF
 ENV CROSSBAR_VERSION $CROSSBAR_VERSION
 
 # we bindly copy over qemu deps for all archs regardless of arch
-# do we really need this any more?
-#COPY .qemu/qemu-aarch64-static /usr/bin/qemu-aarch64-static
-#COPY .qemu/qemu-arm-static /usr/bin/qemu-arm-static
+COPY --from=qemu /usr/bin/qemu-aarch64-static /usr/bin/
+COPY --from=qemuarm /usr/bin/qemu-arm-static /usr/bin/
 
 ENV LANG C.UTF-8
 ENV DEBIAN_FRONTEND noninteractive
