--- a/crossbar/master/node/config.json
+++ b/crossbar/master/node/config.json
@@ -219,7 +219,7 @@
             "components": [
                 {
                     "type": "class",
-                    "classname": "crossbarfx.master.node.authenticator.Authenticator",
+                    "classname": "crossbar.master.node.authenticator.Authenticator",
                     "realm": "com.crossbario.fabric",
                     "role": "authenticator",
                     "extra": {
@@ -244,7 +244,7 @@
             "components": [
                 {
                     "type": "class",
-                    "classname": "crossbarfx.master.node.DomainController",
+                    "classname": "crossbar.master.node.DomainController",
                     "realm": "com.crossbario.fabric",
                     "extra": {
                         "metering": {
