--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ whitelist_externals =
     coverage
     bandit
     flake8
+    pytest
 deps =
     -r {toxinidir}/requirements-dev.txt
     examples: colorama
