--- a/setup.cfg
+++ b/setup.cfg
@@ -6,3 +6,7 @@ universal=1
 install_requires =
     vmprof>=0.4.12; platform_machine=='x86_64' or platform_machine=='i386' or platform_machine=='arm'
     wsaccel>=0.6.2; platform_python_implementation=='CPython'
+
+[pycodestyle]
+max-line-length = 110
+statistics = True
