--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
+include README.rst
 include crossbar/LEGAL
 include crossbar/LICENSE
 include crossbar/LICENSE-FOR-API
@@ -11,3 +12,9 @@ recursive-include crossbar/common/keys *
 recursive-include crossbar/node/templates *
 recursive-include crossbar/webservice/templates *
 recursive-include crossbar/adapter/mqtt/test/certs *
+recursive-include crossbar/edge/webservice/templates *
+recursive-include crossbar/edge/node/config *
+recursive-include crossbar/master/webservice/templates *
+recursive-include crossbar/master/node *.json
+recursive-include crossbar/network/node *.json
+recursive-include crossbar/tests *.json
