--- a/tox.ini
+++ b/tox.ini
@@ -59,6 +59,7 @@ whitelist_externals =
     echo
     curl
     which
+    sphinx-build
 setenv =
     PYTHONPATH                  = {toxinidir}
     CB_FULLTESTS                = {env:CB_FULLTESTS:1}
@@ -203,7 +204,6 @@ commands =
     flake8 \
         --exclude crossbar/shell/reflection \
         --ignore=E501,E402,E722,E741,W503,W504,E126,E251 \
-        #--ignore=E117,E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806,W503,F523,F524 \
         crossbar
 
 
@@ -232,8 +232,10 @@ skip_install = True
 deps =
     mypy
 commands=
-    # ignore: crossbar/worker/test/examples/syntaxerror.py
-    mypy --ignore-missing-imports crossbar
+    mypy \
+        --exclude "crossbar/worker/test/examples/syntaxerror.py" \
+        --ignore-missing-imports \
+        crossbar
 
 
 [testenv:coverage]
