--- a/tox.ini
+++ b/tox.ini
@@ -41,7 +41,7 @@ python =
 description =
     Common environment.
 # yes, we do want to skip the installation of the package, because we do that ourself
-skip_install = False
+skip_install = True
 whitelist_externals =
     sh
     ldd
@@ -60,6 +60,7 @@ whitelist_externals =
     curl
     which
     sphinx-build
+    coverage
 setenv =
     PYTHONPATH                  = {toxinidir}
     CB_FULLTESTS                = {env:CB_FULLTESTS:1}
@@ -89,7 +90,7 @@ setenv =
     MAILGUN_KEY                 = "key-00000000000000000000000000000000"
     MAILGUN_URL                 = "https://api.mailgun.net/v3/mailing.crossbar.io/messages"
     CROSSBAR_FABRIC_URL         = {env:CROSSBAR_FABRIC_URL:ws://localhost:9000/ws}
-    CROSSBAR_FABRIC_SUPERUSER   = {homedir}/.CROSSBAR/default.pub
+    CROSSBAR_FABRIC_SUPERUSER   = {homedir}/.crossbar/default.pub
 passenv =
     # https://packaging.python.org/guides/supporting-windows-using-appveyor/#testing-with-tox
     DISTUTILS_USE_SDK
@@ -97,9 +98,6 @@ passenv =
     INCLUDE
     LIB
     HOME
-#deps =
-#    -r {toxinidir}/requirements-dev.txt
-#    examples: colorama
 commands =
     # Install pip v19.3.1 (yes, absolutely, we do not want the "new resolver" shit)
     curl -sSL -o get-pip.py https://bootstrap.pypa.io/get-pip.py
@@ -110,25 +108,25 @@ commands =
     pip install -r{toxinidir}/requirements-dev.txt
 
     # Install package dependencies
-    pip install -r{toxinidir}/requirements-pinned.txt
-
-    # Install the package itself
-    pip install .
+    # pip install -r{toxinidir}/requirements-pinned.txt
+    pip install -r{toxinidir}/requirements-latest.txt
 
     # inject build ID into source code: modifies CROSSBAR/_version.py!
     echo "Building with CROSSBAR_BUILD_ID={env:CROSSBAR_BUILD_ID}"
     python inject-build-id.py
 
+    # Install the package itself
+    pip install .
+
     # print effective version/build
-    python -c "from crossbar._version import __version__; print('crossbar==', __version__)"
-    python -c "from CROSSBAR._version import __version__, __build__; print('CROSSBAR==', __version__, __build__)"
+    python -c "from crossbar._version import __version__, __build__; print('crossbar==', __version__, __build__)"
 
     # check basic personality import
-    python -c "import txaio; txaio.use_twisted(); from CROSSBAR import edge, master"
+    python -c "import txaio; txaio.use_twisted(); from crossbar import edge, master"
 
     # generate default profile
     echo "Testing with CROSSBAR_FABRIC_URL={env:CROSSBAR_FABRIC_URL}, CROSSBAR_FABRIC_SUPERUSER={env:CROSSBAR_FABRIC_SUPERUSER}"
-    CROSSBAR shell init --yes
+    crossbar shell init --yes
 
     # in envs with "cli", run crossbar CLI via a test shell script
     cli: {toxinidir}/test/test_cli.sh
@@ -143,7 +141,7 @@ commands =
     pytest: pytest CROSSBAR/edge/node/tests/
     pytest: pytest -sv CROSSBAR
 
-    # run functional tests (both Crossbar.io OSS and Crossbar.io FX)
+    # run functional tests
     functests-cb: pytest -sv --no-install {toxinidir}/test/functests/cbtests
     functests-cfc: sh -c '{toxinidir}/test/test_setup.sh && pytest -sv --no-install {toxinidir}/test/functests/cfctests'
 
@@ -166,7 +164,7 @@ commands =
 [testenv:sphinx]
 description =
     Generate docs using Sphinx.
-skip_install = False
+skip_install = True
 commands =
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
