--- a/tox.ini
+++ b/tox.ini
@@ -231,7 +231,7 @@ deps =
     mypy
 commands=
     mypy \
-        --exclude "crossbar/worker/test/examples/syntaxerror.py" \
+        --exclude '(test_.*\.py)|(syntaxerror\.py)' \
         --ignore-missing-imports \
         crossbar
 
