--- a/tox.ini
+++ b/tox.ini
@@ -138,8 +138,8 @@ commands =
     trial: python -m twisted.trial crossbar
 
     # run CE tests
-    pytest: pytest CROSSBAR/edge/node/tests/
-    pytest: pytest -sv CROSSBAR
+    # pytest: pytest crossbar/edge/node/tests/
+    pytest: pytest -sv crossbar
 
     # run functional tests
     functests-cb: pytest -sv --no-install {toxinidir}/test/functests/cbtests
