--- a/tox.ini
+++ b/tox.ini
@@ -11,10 +11,10 @@ envlist =
     {py37,py38,py39,pypy37}-cli
     {py37,py38,py39,pypy37}-examples
     ; pytest
-    ; {py39,pypy37}-cli-1
-    ; {py39,pypy37}-cli-2
-    ; {py39,pypy37}-cli-3
-    ; {py39,pypy37}-xbrnetwork-1
+    {py39,pypy37}-cli-1
+    {py39,pypy37}-cli-2
+    {py39,pypy37}-cli-3
+    {py39,pypy37}-xbrnetwork-1
     ; functests-cb
     ; functests-cfc
     ; {py39,pypy37}-api-1
