--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -149,7 +149,7 @@ jobs:
 
     - name: Run management API test client
       run: |
-        ./test/test/management/run.sh
+        ./test/management/run.sh
 
     - name: Run command line tests (Crossbar.io CLI) 0
       run: |
