--- a/tox.ini
+++ b/tox.ini
@@ -6,20 +6,20 @@ envlist =
     mypy
     yapf
     bandit
-    coverage
+    # coverage
     {py37,py38,py39,pypy37}-{pinned,unpinned,abtrunk}-trial
     {py37,py38,py39,pypy37}-cli
     {py37,py38,py39,pypy37}-examples
-    ; pytest
+    # pytest
     {py39,pypy37}-cli-1
     {py39,pypy37}-cli-2
     {py39,pypy37}-cli-3
     {py39,pypy37}-xbrnetwork-1
-    ; functests-cb
-    ; functests-cfc
-    ; {py39,pypy37}-api-1
-    ; {py39,pypy37}-automate-1
-    ; {py39,pypy37}-automate-2
+    # functests-cb
+    # functests-cfc
+    # {py39,pypy37}-api-1
+    # {py39,pypy37}-automate-1
+    # {py39,pypy37}-automate-2
 
 
 # MAP: GitHub Actions Python Name => Tox Env Name (for Python)
