--- a/.github/workflows/deploy-wheels.yml
+++ b/.github/workflows/deploy-wheels.yml
@@ -1,4 +1,4 @@
-name: deploy
+name: deploy-wheels
 
 on:
   # Trigger this workflow when the "main" workflow has completed successfully
@@ -78,6 +78,14 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
 
-    - name: Deploy (build, package and upload)
+    - name: Build and deploy wheels
       run: |
-        ./deploy.sh
+        ./deploy-wheels.sh
+
+    - name: Trigger Binaries CD pipeline
+      run: |
+        curl -v -X POST -u "${ACCESS_TOKEN}" \
+          -H "Accept: application/vnd.github.everest-preview+json" \
+          -H "Content-Type: application/json" \
+          --data '{"event_type":"build"}' \
+          https://api.github.com/repos/crossbario/crossbar-binaries/dispatches
