--- a/.github/workflows/deploy-wheels.yml
+++ b/.github/workflows/deploy-wheels.yml
@@ -30,6 +30,7 @@ jobs:
       AWS_ACCESS_KEY_ID:     ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       WAMP_PRIVATE_KEY:      ${{ secrets.WAMP_PRIVATE_KEY }}
+      ACCESS_TOKEN:          ${{ secrets.ACCESS_TOKEN }}
 
     steps:
     - uses: actions/checkout@v2
