--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -95,7 +95,9 @@ jobs:
     strategy:
       matrix:
         # https://github.com/actions/setup-python#specifying-a-pypy-version
-        python-version: ['3.7', '3.9', 'pypy-3.7']
+        python-version: ['3.7', '3.9']
+        # FIXME
+        # python-version: ['3.7', '3.9', 'pypy-3.7']
 
     # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
     # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
