--- a/tox.ini
+++ b/tox.ini
@@ -228,7 +228,7 @@ description =
     Run mypy type checks.
 skip_install = True
 deps =
-    mypy
+    mypy<0.900
 commands=
     mypy \
         --exclude '(test_.*\.py)|(syntaxerror\.py)' \
