--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,6 +136,8 @@ jobs:
       run: |
         pip install -U .
         pip install -r requirements-latest.txt
+        python3 -c 'from autobahn.wamp.cryptosign import HAS_CRYPTOSIGN; print("HAS_CRYPTOSIGN =", HAS_CRYPTOSIGN)'
+        python3 -c 'from autobahn.wamp.cryptosign import SigningKeyBase'
 
     - name: Display Crossbar.io version
       run: |
