--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,8 +136,9 @@ jobs:
       run: |
         pip install -U .
         pip install -r requirements-latest.txt
-        python3 -c 'from autobahn.wamp.cryptosign import HAS_CRYPTOSIGN; print("HAS_CRYPTOSIGN =", HAS_CRYPTOSIGN)'
-        python3 -c 'from autobahn.wamp.cryptosign import SigningKeyBase'
+        cat /opt/hostedtoolcache/Python/3.7.10/x64/lib/python3.7/site-packages/autobahn/wamp/cryptosign.py
+        python -c 'from autobahn.wamp.cryptosign import HAS_CRYPTOSIGN; print("HAS_CRYPTOSIGN =", HAS_CRYPTOSIGN)'
+        python -c 'from autobahn.wamp.cryptosign import SigningKeyBase'
 
     - name: Display Crossbar.io version
       run: |
