--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -134,7 +134,7 @@ jobs:
 
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
-        pip uninstall autobahn
+        pip uninstall autobahn -y
         pip install .
         pip install -r requirements-latest.txt
 
