--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -136,9 +136,9 @@ jobs:
       run: |
         # remove autobahn as updating to latest is broken if installing
         # from github. see https://stackoverflow.com/a/68432209
-        pip uninstall autobahn -y
-        pip install -r requirements-latest.txt
-        pip install .
+        # pip uninstall autobahn -y
+        pip install --no-cache-dir -r requirements-latest.txt
+        pip install --no-cache-dir .
 
     - name: Display Crossbar.io version
       run: |
