--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,8 +137,8 @@ jobs:
         # remove autobahn as updating to latest is broken if installing
         # from github. see https://stackoverflow.com/a/68432209
         # pip uninstall autobahn -y
-        pip install --no-cache-dir -r requirements-latest.txt
-        pip install --no-cache-dir .
+        pip install --ignore-installed -r requirements-latest.txt
+        pip install .
 
     - name: Display Crossbar.io version
       run: |
