--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -134,10 +134,7 @@ jobs:
 
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
-        # remove autobahn as updating to latest is broken if installing
-        # from github. see https://stackoverflow.com/a/68432209
-        pip uninstall autobahn txaio -y
-        pip install -r requirements-latest.txt
+        pip install --ignore-installed -r requirements-latest.txt
         pip install .
 
     - name: Display Crossbar.io version
