--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -1,129 +1,143 @@
+aiohttp==3.8.1
+aiosignal==1.2.0
 appdirs==1.4.4
-argon2-cffi==20.1.0
-arrow==1.0.3
-attrs==20.3.0
-autobahn==21.3.1
+argon2-cffi==21.1.0
+arrow==1.2.1
+async-timeout==4.0.1
+attrs==21.2.0
+autobahn==21.11.1
 Automat==20.2.0
-base58==1.0.3
+base58==2.1.1
 bcrypt==3.2.0
 binaryornot==0.4.4
 bitarray==1.2.2
-bitstring==3.1.7
+bitstring==3.1.9
 cached-property==1.5.2
 cbor==1.0.0
-cbor2==5.2.0
-certifi==2020.12.5
-cffi==1.14.5
+cbor2==5.4.2
+certifi==2021.10.8
+cffi==1.15.0
 cfxdb==21.2.1
 chardet==4.0.0
-click==7.1.2
+charset-normalizer==2.0.7
+click==8.0.3
 colorama==0.4.4
 constantly==15.1.0
-cookiecutter==1.7.2
-cryptography==3.4.7
-cytoolz==0.11.0
-docker==4.4.4
-ecdsa==0.16.1
+cookiecutter==1.7.3
+cryptography==36.0.0
+cytoolz==0.11.2
+docker==5.0.3
+ecdsa==0.17.0
 eth-abi==2.1.1
-eth-account==0.5.4
-eth-hash==0.3.1
+eth-account==0.5.6
+eth-hash==0.3.2
 eth-keyfile==0.5.1
 eth-keys==0.3.3
 eth-rlp==0.2.1
-eth-typing==2.2.2
+eth-typing==3.0.0
 eth-utils==1.10.0
-Flask==1.1.2
-flatbuffers==1.12
-h2==4.0.0
+Flask==2.0.2
+flatbuffers==2.0
+frozenlist==1.2.0
+h2==3.2.0
 hashin==0.15.0
-hexbytes==0.2.1
-hpack==4.0.0
-humanize==3.3.0
-hyperframe==6.0.0
+hexbytes==0.2.2
+hkdf==0.0.3
+hpack==3.0.0
+humanize==3.12.0
+hyperframe==5.2.0
 hyperlink==21.0.0
 idna==2.5
-importlib-resources==5.1.2
+importlib-resources==5.4.0
 incremental==21.3.0
-ipfshttpclient==0.7.0a1
-iso8601==0.1.14
-itsdangerous==1.1.0
-Jinja2==2.11.3
+ipfshttpclient==0.8.0a2
+iso8601==1.0.2
+itsdangerous==2.0.1
+Jinja2==3.0.3
 jinja2-highlight==0.6.1
 jinja2-time==0.2.0
 jsonschema==3.2.0
-lmdb==1.1.1
+lmdb==1.2.1
 lru-dict==1.1.7
-MarkupSafe==1.1.1
+MarkupSafe==2.0.1
 mistune==0.8.4
-mnemonic==0.19
+mnemonic==0.20
 morphys==1.0
 msgpack==1.0.2
 multiaddr==0.0.9
+multidict==5.2.0
 mypy-extensions==0.4.3
 netaddr==0.8.0
-numpy==1.20.2
-packaging==20.9
+numpy==1.21.4
+packaging==21.3
 parsimonious==0.8.1
 passlib==1.7.4
 poyo==0.5.0
-priority==1.3.0
-prompt-toolkit==3.0.18
-protobuf==3.15.7
+priority==2.0.0
+prompt-toolkit==3.0.22
+protobuf==3.19.1
 psutil==5.8.0
 PTable==0.9.2
-git+https://github.com/crossbario/py-cid.git@remove-dep-upper-limits#egg=py-cid
+py-cid==0.4.0
 py-ecc==5.2.0
 py-eth-sig-utils==0.4.0
 py-multibase==1.0.3
 py-multicodec==0.2.1
-git+https://github.com/crossbario/py-multihash.git@remove-dep-version-limits#egg=py-multihash
+py-multihash==2.1.0
 py-ubjson==0.16.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser==2.20
-pycryptodome==3.10.1
-Pygments==2.8.1
+pycairo==1.20.1
+pycparser==2.21
+pycryptodome==3.11.0
+Pygments==2.10.0
+PyGObject==3.42.0
 PyNaCl==1.4.0
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
+pyOpenSSL==21.0.0
+pyparsing==3.0.6
 PyQRCode==1.2.1
-pyrsistent==0.17.3
+pyrsistent==0.18.0
 python-baseconv==1.2.2
-python-dateutil==2.8.1
-python-slugify==4.0.1
+python-dateutil==2.8.2
+python-slugify==5.0.2
 python-snappy==0.6.0
 PyTrie==0.4.0
-pytz==2021.1
-PyYAML==5.4.1
-requests==2.25.1
+pytz==2021.3
+PyYAML==6.0
+requests==2.26.0
 rlp==2.0.1
 sdnotify==0.3.2
-service-identity==18.1.0
+service-identity==21.1.0
 setproctitle==1.2.2
-setuptools==54.0.0
-six==1.15.0
-sortedcontainers==2.3.0
+setuptools==58.2.0
+six==1.16.0
+sortedcontainers==2.4.0
+spake2==0.8
 stringcase==1.2.0
 tabulate==0.8.9
 text-unidecode==1.3
-toolz==0.11.1
-treq==21.1.0
-Twisted==21.2.0
+toolz==0.11.2
+treq==21.5.0
+Twisted==21.7.0
 txaio==21.2.1
-txtorcon==20.0.0
+txtorcon==21.1.0
+typing-extensions==4.0.0
 u-msgpack-python==2.7.1
-ujson==4.0.2
-urllib3==1.26.5
+ujson==4.3.0
+urllib3==1.26.7
 validate-email==1.3
 varint==1.0.2
 vmprof==0.4.15
-watchdog==2.0.2
+watchdog==2.1.6
 wcwidth==0.2.5
-web3==5.17.0
-websocket-client==0.58.0
-websockets==8.1
-Werkzeug==1.0.1
+web3==5.25.0
+websocket-client==1.2.1
+websockets==9.1
+Werkzeug==2.0.2
 wsaccel==0.6.3
 xbr==21.2.1
+yapf==0.29.0
+yarl==1.7.2
+zipp==3.6.0
 zlmdb==21.2.1
-zope.interface==5.3.0
+zope.interface==5.4.0
