--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -65,6 +65,7 @@ twisted[tls,conch,http2]>=20.3.0; sys_platform != 'darwin' and sys_platform != '
 txaio>=21.2.1
 txtorcon>=20.0.0
 u-msgpack-python>=2.4.1
+ujson>=5.1.0
 urllib3>=1.21.1,<1.27
 validate-email>=1.3
 # use vmprof master until https://github.com/vmprof/vmprof-python/issues/240 is fixed
