--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -1,10 +1,11 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
 appdirs==1.4.4
-argon2-cffi==21.1.0
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 arrow==1.2.1
-async-timeout==4.0.1
-attrs==21.2.0
+async-timeout==4.0.2
+attrs==21.4.0
 autobahn==21.11.1
 Automat==20.2.0
 base58==2.1.1
@@ -19,32 +20,32 @@ certifi==2021.10.8
 cffi==1.15.0
 cfxdb==21.2.1
 chardet==4.0.0
-charset-normalizer==2.0.7
+charset-normalizer==2.0.10
 click==8.0.3
 colorama==0.4.4
 constantly==15.1.0
 cookiecutter==1.7.3
-cryptography==36.0.0
+cryptography==36.0.1
 cytoolz==0.11.2
 docker==5.0.3
 ecdsa==0.17.0
-eth-abi==2.1.1
-eth-account==0.5.6
+eth-abi==3.0.0
+eth-account==0.6.0
 eth-hash==0.3.2
-eth-keyfile==0.5.1
-eth-keys==0.3.3
-eth-rlp==0.2.1
+eth-keyfile==0.6.0
+eth-keys==0.4.0
+eth-rlp==0.3.0
 eth-typing==3.0.0
-eth-utils==1.10.0
+eth-utils==2.0.0
 Flask==2.0.2
 flatbuffers==2.0
-frozenlist==1.2.0
+frozenlist==1.3.0
 h2==3.2.0
-hashin==0.15.0
+hashin==0.17.0
 hexbytes==0.2.2
 hkdf==0.0.3
 hpack==3.0.0
-humanize==3.12.0
+humanize==3.13.1
 hyperframe==5.2.0
 hyperlink==21.0.0
 idna==2.5
@@ -57,29 +58,29 @@ Jinja2==3.0.3
 jinja2-highlight==0.6.1
 jinja2-time==0.2.0
 jsonschema==3.2.0
-lmdb==1.2.1
+lmdb==1.3.0
 lru-dict==1.1.7
 MarkupSafe==2.0.1
-mistune==0.8.4
+mistune==2.0.2
 mnemonic==0.20
 morphys==1.0
 msgpack==1.0.3
 multiaddr==0.0.9
-multidict==5.2.0
+multidict==6.0.2
 mypy-extensions==0.4.3
 netaddr==0.8.0
-numpy==1.21.4
+numpy==1.22.1
 packaging==21.3
 parsimonious==0.8.1
 passlib==1.7.4
 poyo==0.5.0
 priority==2.0.0
-prompt-toolkit==3.0.22
-protobuf==3.19.1
-psutil==5.8.0
+prompt-toolkit==3.0.24
+protobuf==3.19.3
+psutil==5.9.0
 PTable==0.9.2
 py-cid==0.4.0
-py-ecc==5.2.0
+py-ecc==6.0.0
 py-eth-sig-utils==0.4.0
 py-multibase==1.0.3
 py-multicodec==0.2.1
@@ -89,14 +90,14 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycairo==1.20.1
 pycparser==2.21
-pycryptodome==3.11.0
-Pygments==2.10.0
+pycryptodome==3.13.0
+Pygments==2.11.2
 PyGObject==3.42.0
-PyNaCl==1.4.0
+PyNaCl==1.5.0
 pyOpenSSL==21.0.0
-pyparsing==3.0.6
+pyparsing==3.0.7
 PyQRCode==1.2.1
-pyrsistent==0.18.0
+pyrsistent==0.18.1
 python-baseconv==1.2.2
 python-dateutil==2.8.2
 python-slugify==5.0.2
@@ -104,12 +105,12 @@ python-snappy==0.6.0
 PyTrie==0.4.0
 pytz==2021.3
 PyYAML==6.0
-requests==2.26.0
-rlp==2.0.1
+requests==2.27.1
+rlp==3.0.0
 sdnotify==0.3.2
 service-identity==21.1.0
 setproctitle==1.2.2
-setuptools==58.3.0
+setuptools==60.1.1
 six==1.16.0
 sortedcontainers==2.4.0
 spake2==0.8
@@ -121,22 +122,23 @@ treq==21.5.0
 Twisted==21.7.0
 txaio==21.2.1
 txtorcon==21.1.0
-typing-extensions==4.0.0
+typing-extensions==4.0.1
 u-msgpack-python==2.7.1
-ujson==4.3.0
-urllib3==1.26.7
+ujson==5.1.0
+urllib3==1.26.8
 validate-email==1.3
 varint==1.0.2
 vmprof==0.4.15
 watchdog==2.1.6
 wcwidth==0.2.5
-web3==5.25.0
-websocket-client==1.2.1
+web3==5.26.0
+websocket-client==1.2.3
 websockets==9.1
 Werkzeug==2.0.2
 wsaccel==0.6.3
 xbr==21.2.1
 yapf==0.29.0
 yarl==1.7.2
+zipp==3.7.0
 zlmdb==21.2.1
 zope.interface==5.4.0
