--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,7 +13,7 @@ sphinx-autodoc-typehints
 # jinja2-highlight>=0.6.1
 humanize
 
-#pip==19.3.1
+pip
 tox
 # detox # detox is unmaintained and incompatible with tox > 3.6
 mock
