--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -3,7 +3,7 @@ aiosignal==1.2.0
 appdirs==1.4.4
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-arrow==1.2.1
+arrow==1.2.2
 async-timeout==4.0.2
 attrs==21.4.0
 autobahn==21.11.1
@@ -15,7 +15,7 @@ bitarray==1.2.2
 bitstring==3.1.9
 cached-property==1.5.2
 cbor==1.0.0
-cbor2==5.4.2
+cbor2==5.4.2.post1
 certifi==2021.10.8
 cffi==1.15.0
 cfxdb==21.2.1
@@ -48,7 +48,7 @@ hpack==3.0.0
 humanize==3.13.1
 hyperframe==5.2.0
 hyperlink==21.0.0
-idna==2.5
+idna==3.3
 importlib-resources==5.4.0
 incremental==21.3.0
 ipfshttpclient==0.8.0a2
@@ -74,9 +74,9 @@ packaging==21.3
 parsimonious==0.8.1
 passlib==1.7.4
 poyo==0.5.0
-priority==2.0.0
-prompt-toolkit==3.0.24
-protobuf==3.19.3
+priority==1.3.0
+prompt-toolkit==3.0.26
+protobuf==3.19.4
 psutil==5.9.0
 PTable==0.9.2
 py-cid==0.4.0
@@ -110,7 +110,7 @@ rlp==3.0.0
 sdnotify==0.3.2
 service-identity==21.1.0
 setproctitle==1.2.2
-setuptools==60.1.1
+setuptools==60.2.0
 six==1.16.0
 sortedcontainers==2.4.0
 spake2==0.8
@@ -140,5 +140,5 @@ xbr==21.2.1
 yapf==0.29.0
 yarl==1.7.2
 zipp==3.7.0
-zlmdb==21.2.1
+zlmdb==22.1.1
 zope.interface==5.4.0
