--- a/tox.ini
+++ b/tox.ini
@@ -99,9 +99,10 @@ passenv =
     LIB
     HOME
 commands =
-    # Install pip v19.3.1 (yes, absolutely, we do not want the "new resolver" shit)
-    curl -sSL -o get-pip.py https://bootstrap.pypa.io/get-pip.py
-    python get-pip.py "pip<20"
+    # NOT NEEDED ANYMORE!
+    #    Install pip v19.3.1 (yes, absolutely, we do not want the "new resolver" shit)
+    #    curl -sSL -o get-pip.py https://bootstrap.pypa.io/get-pip.py
+    #    python get-pip.py "pip<20"
     pip show pip
 
     # Install development dependencies
