--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -6,7 +6,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.2.2
 async-timeout==4.0.2
 attrs==21.4.0
-autobahn==21.11.1
+autobahn==22.1.1
 Automat==20.2.0
 base58==2.1.1
 bcrypt==3.2.0
@@ -29,14 +29,14 @@ cryptography==36.0.1
 cytoolz==0.11.2
 docker==5.0.3
 ecdsa==0.17.0
-eth-abi==3.0.0
-eth-account==0.6.0
+eth-abi==2.1.1
+eth-account==0.5.7
 eth-hash==0.3.2
-eth-keyfile==0.6.0
-eth-keys==0.4.0
-eth-rlp==0.3.0
-eth-typing==3.0.0
-eth-utils==2.0.0
+eth-keyfile==0.5.1
+eth-keys==0.3.4
+eth-rlp==0.2.1
+eth-typing==2.3.0
+eth-utils==1.10.0
 Flask==2.0.2
 flatbuffers==2.0
 frozenlist==1.3.0
@@ -79,12 +79,12 @@ prompt-toolkit==3.0.26
 protobuf==3.19.4
 psutil==5.9.0
 PTable==0.9.2
-py-cid==0.4.0
-py-ecc==6.0.0
+py-cid @ git+https://github.com/crossbario/py-cid.git@e1dc52a43ced53845679405f78d92fb18f093653
+py-ecc==5.2.0
 py-eth-sig-utils==0.4.0
 py-multibase==1.0.3
 py-multicodec==0.2.1
-py-multihash==2.1.0
+py-multihash @ git+https://github.com/crossbario/py-multihash.git@86b54b8f9f0cf14c7370f38ae32f2b4b14f5b5e0
 py-ubjson==0.16.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -106,7 +106,7 @@ PyTrie==0.4.0
 pytz==2021.3
 PyYAML==6.0
 requests==2.27.1
-rlp==3.0.0
+rlp==2.0.1
 sdnotify==0.3.2
 service-identity==21.1.0
 setproctitle==1.2.2
@@ -122,13 +122,13 @@ treq==21.5.0
 Twisted==21.7.0
 txaio==21.2.1
 txtorcon==21.1.0
-typing-extensions==4.0.1
+typing_extensions==4.0.1
 u-msgpack-python==2.7.1
 ujson==5.1.0
 urllib3==1.26.8
 validate-email==1.3
 varint==1.0.2
-vmprof==0.4.15
+vmprof @ git+https://github.com/vmprof/vmprof-python.git@1a591272a62e8e75267a15b19620f67853e7b523
 watchdog==2.1.6
 wcwidth==0.2.5
 web3==5.26.0
@@ -140,5 +140,5 @@ xbr==21.2.1
 yapf==0.29.0
 yarl==1.7.2
 zipp==3.7.0
-zlmdb==22.1.1
+zlmdb==22.1.2
 zope.interface==5.4.0
