--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,13 +91,11 @@ jobs:
     env:
       CB_FULLTESTS: 1
 
-    # Test on Ubuntu, MacOS, Windows using CPython 3.7/3.9 + PyPy 3.7
+    # Test on CPython 3.7 & 3.10 + PyPy 3.8
     strategy:
       matrix:
         # https://github.com/actions/setup-python#specifying-a-pypy-version
-        python-version: ['3.7', '3.9']
-        # FIXME
-        # python-version: ['3.7', '3.9', 'pypy-3.7']
+        python-version: ['3.7', '3.10', 'pypy-3.8']
 
     # https://github.blog/changelog/2020-04-15-github-actions-new-workflow-features/
     # https://docs.github.com/en/free-pro-team@latest/actions/reference/workflow-syntax-for-github-actions#jobsjob_idstepscontinue-on-error
@@ -134,7 +132,7 @@ jobs:
 
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
-        pip install --ignore-installed -r requirements-latest.txt
+        pip install -r requirements-min.txt
         pip install .
 
     - name: Display Crossbar.io version
