--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,12 +1,23 @@
-name: "CodeQL"
+name: "code-quality"
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-  schedule:
-    - cron: '32 20 * * 5'
+  # Trigger this workflow when the "main" workflow has completed successfully
+  # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows#workflow_run
+  workflow_run:
+    workflows:
+      - main
+    branches:
+      - master
+    types:
+      - completed
+
+# on:
+#   push:
+#     branches: [ master ]
+#   pull_request:
+#     branches: [ master ]
+#   schedule:
+#     - cron: '32 20 * * 5'
 
 jobs:
   analyze:
