--- a/tox.ini
+++ b/tox.ini
@@ -112,8 +112,8 @@ commands =
 
     # Install package dependencies
     # pip install -r{toxinidir}/requirements-pinned.txt
-    # pip install -r{toxinidir}/requirements-latest.txt
-    pip install -r{toxinidir}/requirements-min.txt
+    pip install -r{toxinidir}/requirements-latest.txt
+    # pip install -r{toxinidir}/requirements-min.txt
 
     # inject build ID into source code: modifies CROSSBAR/_version.py!
     echo "Building with CROSSBAR_BUILD_ID={env:CROSSBAR_BUILD_ID}"
