--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,9 @@ envlist =
     yapf
     bandit
     # coverage
-    {py37,py310,pypy38}-{pinned,unpinned,abtrunk}-trial
-    {py37,py310,pypy38}-cli
-    {py37,py310,pypy38}-examples
+    {py37,py39,py310,pypy38}-{pinned,unpinned,abtrunk}-trial
+    {py37,py39,py310,pypy38}-cli
+    {py37,py39,py310,pypy38}-examples
     # pytest
     # {py39,pypy37}-cli-1
     # {py39,pypy37}-cli-2
