--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,9 @@ envlist =
     yapf
     bandit
     # coverage
-    {py37,py310,pypy38}-{pinned,unpinned,abtrunk}-trial
-    {py37,py310,pypy38}-cli
-    {py37,py310,pypy38}-examples
+    {py37,py39,py310,pypy38}-{pinned,unpinned,abtrunk}-trial
+    {py37,py39,py310,pypy38}-cli
+    {py37,py39,py310,pypy38}-examples
     # pytest
     # {py39,pypy37}-cli-1
     # {py39,pypy37}-cli-2
@@ -112,8 +112,8 @@ commands =
 
     # Install package dependencies
     # pip install -r{toxinidir}/requirements-pinned.txt
-    # pip install -r{toxinidir}/requirements-latest.txt
-    pip install -r{toxinidir}/requirements-min.txt
+    pip install -r{toxinidir}/requirements-latest.txt
+    # pip install -r{toxinidir}/requirements-min.txt
 
     # inject build ID into source code: modifies CROSSBAR/_version.py!
     echo "Building with CROSSBAR_BUILD_ID={env:CROSSBAR_BUILD_ID}"
