--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -130,14 +130,16 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
 
+    # pip install -r requirements-min.txt
     - name: Install Crossbar.io package dependencies & Crossbar.io
       run: |
-        pip install -r requirements-min.txt
         pip install .
+        pip install -U -r requirements-latest.txt
 
     - name: Display Crossbar.io version
       run: |
         python -c "import crossbar; print(crossbar.__version__)"
+        crossbar version
 
     - name: Run Python import tests
       run: |
