--- a/requirements-latest.txt
+++ b/requirements-latest.txt
@@ -3,7 +3,7 @@ git+https://github.com/crossbario/autobahn-python.git@master#egg=autobahn[twiste
 base58>=2.1.0
 bcrypt>=3.1.6
 bitstring>=3.1.5
-cbor>=1.0.0
+cbor2>=5.2.0
 git+https://github.com/crossbario/cfxdb.git@master#egg=cfxdb
 click>=7.0
 colorama>=0.4.4
