--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -3,7 +3,7 @@ autobahn[twisted,encryption,compress,serialization,scram,xbr]>=22.2.1
 base58>=2.1.0
 bcrypt>=3.1.6
 bitstring>=3.1.5
-cbor>=1.0.0
+cbor2>=5.2.0
 cfxdb>=22.2.1
 click>=7.0
 colorama>=0.4.4
