--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -1,10 +1,10 @@
 attrs>=17.2.0
-autobahn[twisted,encryption,compress,serialization,scram,xbr]>=22.2.1
+autobahn[twisted,encryption,compress,serialization,scram,xbr]>=22.3.2
 base58>=2.1.0
 bcrypt>=3.1.6
 bitstring>=3.1.5
 cbor2>=5.2.0
-cfxdb>=22.2.2
+cfxdb>=22.3.1
 click>=7.0
 colorama>=0.4.4
 constantly>=15.1.0
@@ -77,5 +77,5 @@ web3>=5.13.1
 werkzeug>=0.14.1
 wsaccel>=0.6.2; platform_python_implementation=='CPython'
 xbr>=21.2.1
-zlmdb>=22.3.1.dev1
+zlmdb>=22.3.1
 zope.interface>=4.4.2
