--- a/tox.ini
+++ b/tox.ini
@@ -6,20 +6,21 @@ envlist =
     mypy
     yapf
     bandit
-    # coverage
     {py37,py39,py310,pypy38}-{pinned,unpinned,abtrunk}-trial
     {py37,py39,py310,pypy38}-cli
     {py37,py39,py310,pypy38}-examples
+    # FIXME:
+    # coverage
     # pytest
-    # {py39,pypy37}-cli-1
-    # {py39,pypy37}-cli-2
-    # {py39,pypy37}-cli-3
-    {py310,pypy38}-xbrnetwork-1
-    # functests-cb
-    # functests-cfc
-    # {py39,pypy37}-api-1
-    # {py39,pypy37}-automate-1
-    # {py39,pypy37}-automate-2
+    functests-cb
+    functests-cfc
+    # {py39,pypy38}-api-1
+    # {py39,pypy38}-cli-1
+    # {py39,pypy38}-cli-2
+    # {py39,pypy38}-cli-3
+    # {py39,pypy38}-automate-1
+    # {py39,pypy38}-automate-2
+    # {py39,pypy38}-xbrnetwork-1
 
 
 # MAP: GitHub Actions Python Name => Tox Env Name (for Python)
