--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ envlist =
     functests-cb
     functests-cfc
     {py39,pypy38}-api-1
+    {py39,pypy38}-cli-0
     {py39,pypy38}-cli-1
     {py39,pypy38}-cli-2
     {py39,pypy38}-cli-3
@@ -149,6 +150,7 @@ commands =
     functests-cfc: sh -c '{toxinidir}/test/test_setup.sh && pytest -sv --no-install {toxinidir}/test/functests/cfctests'
 
     # run (in envs with "cli") crossbar CLI via a test shell scripts
+    cli-0: {toxinidir}/test/test_cli_0.sh
     cli-1: {toxinidir}/test/test_cli_1.sh
     cli-2: {toxinidir}/test/test_cli_2.sh
     cli-3: {toxinidir}/test/test_cli_3.sh
